# lead-csv-sanitizer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN_sanitizer.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
samples/: messy_leads.csv
src/lead_csv_sanitizer/: cleaner.py  cli.py  column_mapper.py  dedupe.py  loader.py  report.py  validators.py  writer.py
src/lead_csv_sanitizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_column_mapper.py  test_dedupe.py  test_report.py  test_validators.py
